# sync-vid

./: Cargo.toml  build.sh  manifest_v2.json  manifest_v3.json  test.html
src/: lib.rs
src/network/: Cargo.toml  matchbox_webrtc.rs  mod.rs
src/network/src/: lib.rs  matchbox_webrtc.rs
src/players/: mod.rs  player_interface.rs  youtube.rs
