[package]
name = "sync-vid-extension"
version = "0.1.0"
authors = ["bhanuka.ishan@gmail.com"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sync-vid-network = {path = "src/network/" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.7"
once_cell = "1.17.1"
matchbox_socket = "0.5.0"
rand = "0.8.5"
futures = "0.3.26"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "Document",
    'Document',
    'Element',
    'HtmlElement',
    'HtmlVideoElement',
    'HtmlMediaElement',
    'Node',
    'Window', 
    'Location'
]
